--- a/index.html
+++ b/index.html
@@ -240,6 +240,15 @@
         <div id="comparisons" class="tab-content">
             <h2>Price Adjustment Opportunities</h2>
 
+            <div class="filters-section">
+                <div class="filter-group">
+                    <label>
+                        <input type="checkbox" id="show-expired-toggle" onchange="toggleShowExpired()">
+                        Show expired adjustments
+                    </label>
+                </div>
+            </div>
+
             <div id="comparison-summary" class="summary-card" style="display: none;">
                 <div class="summary-total">
                     <span class="summary-label">Total Potential Adjustment:</span>
