--- a/index.html
+++ b/index.html
@@ -247,6 +247,9 @@
                         Show expired adjustments
                     </label>
                 </div>
+                <div class="filter-group">
+                    <button class="btn btn-secondary" onclick="recalculateComparisons()">🔄 Recalculate</button>
+                </div>
             </div>
 
             <div id="comparison-summary" class="summary-card" style="display: none;">
